--- a/kortex_examples/CMakeLists.txt
+++ b/kortex_examples/CMakeLists.txt
@@ -53,6 +53,7 @@ catkin_install_python(PROGRAMS src/actuator_config/example_actuator_configuratio
                                src/full_arm/example_full_arm_movement.py
                                src/full_arm/example_waypoint_action_client.py
                                src/move_it/example_move_it_trajectories.py
+                               src/move_it/demo_traj_moveit.py
                                src/vision_config/example_vision_configuration.py 
                       DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
