Some tuning for demo example to slide friction device

--- a/kortex_description/grippers/robotiq_2f_140/config/joint_limits.yaml
+++ b/kortex_description/grippers/robotiq_2f_140/config/joint_limits.yaml
@@ -6,3 +6,9 @@ gripper_joint_limits_min:
 
 gripper_joint_limits_max:
   - 0.700
+
+gripper_force_limits_min:
+  - 0.000
+
+gripper_force_limits_max:
+  - 75
