--- a/kortex_description/arms/gen3/7dof/config/joint_limits.yaml
+++ b/kortex_description/arms/gen3/7dof/config/joint_limits.yaml
@@ -6,19 +6,36 @@ joint_names:
   - $(arg prefix)joint_5
   - $(arg prefix)joint_6
   - $(arg prefix)joint_7
+# maximum_velocities:
+#   - 0.8727
+#   - 0.8727
+#   - 0.8727
+#   - 0.8727
+#   - 0.8727
+#   - 0.8727
+#   - 0.8727
+# maximum_accelerations:
+#   - 1.0
+#   - 1.0
+#   - 1.0
+#   - 1.0
+#   - 10.0
+#   - 10.0
+#   - 10.0
+
 maximum_velocities:
-  - 0.8727
-  - 0.8727
-  - 0.8727
-  - 0.8727
-  - 0.8727
-  - 0.8727
-  - 0.8727
+  - 0.5
+  - 0.5
+  - 0.5
+  - 0.5
+  - 0.5
+  - 0.5
+  - 0.5
 maximum_accelerations:
-  - 1.0
-  - 1.0
-  - 1.0
-  - 1.0
-  - 10.0
-  - 10.0
-  - 10.0
+  - 0.5
+  - 0.5
+  - 0.5
+  - 0.5
+  - 5.0
+  - 5.0
+  - 5.0
